--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,29 +22,19 @@ bevy = { version = "0.12", default-features = false, features = [
   "animation",
   "bevy_asset",
   "bevy_audio",
-  "bevy_gilrs",
-  "bevy_scene",
-  "bevy_winit",
   "bevy_core_pipeline",
-  "bevy_pbr",
-  "bevy_gltf",
   "bevy_render",
   "bevy_sprite",
   "bevy_text",
   "bevy_ui",
-  "multi-threaded",
+  "bevy_winit",
   "png",
-  "hdr",
-  "vorbis",
-  "x11",
-  "bevy_gizmos",
-  "android_shared_stdcxx",
-  "tonemapping_luts",
-  "default_font",
 ] }
 image = "0.24"
 winit = "0.28"
-bevy-vello = { git = "https://github.com/vectorgameexperts/bevy-vello", version = "0.3" }
+bevy-vello = { git = "https://github.com/vectorgameexperts/bevy-vello", version = "0.3", features = [
+  "debug",
+] }
 bevy_rapier2d = { version = "0.23", features = ["debug-render-2d"] }
 dolly = "0.4"
 
